# MICAFP

./: .env  .gitignore  .gitlab-ci.yml  .yamllint  BUILD_INFO.txt  CHECKSUMS_legacy_2026-06-19.sha256  Cargo.toml  MANIFEST.txt  MIGRATION_NOTES.md  MIGRATION_STATUS.md  README.md  README_FA.md  adaptive_selector.py  adaptive_transport.py  ai_anti_dpi_iran.py  ai_dpi_mutator.py  ai_dpi_quantum_evasion.py  anti_ai_dpi.py  auto_debug_system.py  checksums.sha256  circuit_breaker_11slot.py  config.py  conftest.py  coverage.json  dpi_evasion_advanced.py  ebpf_blueprint.py  ech_fingerprint_evasion.py  elite_registry.py  generate_quantum_project.sh  generated_json_loader.py  go.mod  go.work  install.sh  iran_anti_siam.py  iran_nin_bypass.py  iran_smart_anti_filter.py  ja3_intelligence.py  main.py  ml_predictor.py  next_gen_transports.py  (+19 more)
.circleci/: README.md  config.yml
.githooks/: pre-push
anti_censorship/: __init__.py
autonomous/: __init__.py  advanced_orchestrator.py  resilient_orchestrator.py
bridge/: bridge_history.json  bridge_list_for_testing.json  bridge_scores.json  conjure.txt  iran_likely_working_all.txt  iran_likely_working_nin.txt  iran_likely_working_obfs4.txt  iran_likely_working_vanilla.txt  iran_likely_working_webtunnel.txt  iran_results.json  meek-azure_72h.txt  meek_lite_72h.txt  obfs4.txt  obfs4_72h.txt  obfs4_72h_ipv6.txt  obfs4_ipv6.txt  obfs4_ipv6_72h.txt  obfs4_tested.txt  snowflake_tested.txt  tested_global_obfs4.txt  tested_global_vanilla.txt  tested_global_webtunnel.txt  vanilla.txt  vanilla_72h.txt  vanilla_ipv6_72h.txt  vanilla_ipv6_tested.txt  vanilla_tested.txt  webtunnel_72h.txt  webtunnel_72h_ipv6.txt  webtunnel_ipv6.txt  webtunnel_ipv6_72h.txt  webtunnel_ipv6_tested.txt  webtunnel_tested.txt
bridge-probe/: Cargo.toml
bridge-probe/src/: main.rs  probe.rs  transport.rs
circuit_breaker/: __init__.py  slot_circuit_breaker.py
config/: __init__.py  feature_flags.py
configs/: env_template.sh
core/: __init__.py  censorship_monitor.py  collector.py  dt_utils.py  endpoint_validator.py  formatter.py  history.py  iran_bridge_prioritizer.py  iran_detector.py  iran_dpi_shaper.py  nin_selector.py  nin_survival_pack.py  notifier.py  scorer.py  smart_iran_scorer.py  temporal_analyzer.py  tester.py
data/: ai_consensus_report.json  anti_ai_dpi_report.json  anti_filter_state.json  anti_filter_v2_state.json  auto_debug_log.json  best_transports.json  blocking_model.pkl  censorship_state.json  ct_monitor_report.json  daily_telemetry_report.json  dashboard.json  dead_code_report.json  dependency_report.json  dpi_intelligence.json  ech_report.json  elite_registry_cache.json  full_audit_report.json  iran_siam_report.json  ja3_baseline.json  ja3_rotation_plan.json  ja3_rotation_report.md  latest-results.json  migration_phase0_inventory.json  model_metadata.json  mutation_history.json  next_gen_bridges.json  nin_advanced_report.json  nin_analysis.json  nin_cut_classifier_report.json  nin_cut_report.json  nin_eligible.json  nin_summary.json  pt_results.json  quantum_safe_report.json  reality_report.json  scheduler_results.json  security_report.json  self_heal_log.json  smart_iran_results.json  telemetry_state.json  (+4 more)
diagnostics/: __init__.py
docs/: ADVANCED_TECHNOLOGIES.md  ARCHITECTURE.md  BUG_REPORT.md  BUILD_REPORT.md  CHANGE_LOG.md  DEPENDENCY_GRAPH.md  DEPENDENCY_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_REPORT.md  INLINE_STEP_SNIPPET.md  MAINTENANCE_GUIDE.md  PORTKEY_CEREBRAS_ARCHITECTURE.md  REMEDIATION_CHANGELOG.md  RUST_CONFIG_PARITY.md  RUST_GENERATED_JSON_LOADER_PARITY.md  RUST_MIGRATION_NOTES.md  SECRETS_MANIFEST.md  SECURITY_REPORT.md  TEST_COVERAGE_REPORT.md  autonomous-advanced-orchestrator.md  autonomous-resilience-architecture.md  iran-bridge-status.md  iran-siam-analysis.md
downloaded-bin/: bridge-probe
export/: anti_ai_dpi_bridges.txt  bridges_api.json  ct_clean_bridges.txt  ech_top_bridges.txt  iran_cut_pack.txt  iran_nin_pack.txt  iran_pack.txt  iran_phantom_bridges.txt  iran_siam_best_bridges.txt  iran_stealth_bridges.txt  nin_cut_bridges.txt  nin_yellow_bridges.txt  reality_configs.json  warp_bridges.txt
gateway/: __init__.py  retry_engine.py
go_tester/: go.mod  main.go
health/: __init__.py  slot_health.py
model_selector/: __init__.py
monitoring/: __init__.py  health_check.py  provider_dashboard.py  structured_logger.py  structured_logging.py  telemetry_dashboard.py
packaging/: build_package.sh
providers/: __init__.py
recovery/: __init__.py  self_healing_engine.py  self_healing_engine_v2.py
registry/: __init__.py  model_registry.py
reports/: __init__.py  artifact_validation_report.json  report_generator.py
scripts/: __init__.py  ai_bridge_reranker.py  ai_bridge_reranker_v2.py  ai_gateway_health_check.py  audit_dead_code.py  autofix_entrypoint.sh  bootstrap_autonomous_orchestrator.sh  build_vip_package.py  check_shell_entrypoints.sh  circleci_env_bootstrap.sh  circleci_ooni_poller.py  circleci_packaging.sh  generate_architecture_docs.py  generate_dependency_graph.py  generate_deployment_report.py  generate_final_report.py  github_actions_env_bootstrap.sh  package.sh  run_full_audit.py  security_scan.py  validate_artifacts.py  validate_dependencies.py  zero_error_engine_v5.sh
sources/: __init__.py  bridge_scoring.py  bridgedb_api.py  direct_scraper.py  github_bridges.py  history_utils.py  legacy_scraper.py  moat.py  static_bridges.py  telegram_bridges.py  torproject.py
src/: adaptive_selector.rs  adaptive_transport.rs  anti_ai_dpi.rs  auto_debug_system.rs  bridge_scoring.rs  circuit_breaker_11slot.rs  collector.rs  config.rs  dt_utils.rs  ech_fingerprint_evasion.rs  feature_flags.rs  history.rs  history_utils.rs  iran_anti_siam.rs  iran_nin_bypass.rs  iran_quantum_dpi_shield_v2.rs  iran_smart_anti_filter_v2.rs  ja3_intelligence.rs  lib.rs  ml_predictor.rs  nin_advanced_bypass.rs  nin_cut_tester.rs  nin_internet_cut_classifier.rs  notifier.rs  onionhop_collector.rs  ooni_correlator.rs  quarantine_manager.rs  results_writer.rs  retry_engine.rs  scorer.rs  scraper.rs  self_heal.rs  slot_circuit_breaker.rs  (+5 more)
(+159 files in other folders)
