[package]
name = "torshield-ir-ultra"
version = "1.0.0"
edition = "2021"
rust-version = "1.78"
publish = false

[workspace]
resolver = "2"
members = [".", "bridge-probe"]

[workspace.package]
edition = "2021"
rust-version = "1.78"

[workspace.dependencies]
reqwest = { version = "=0.12.22", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread", "time", "fs", "process", "full"] }
quinn = "=0.11.8"
scraper = "=0.23.1"
html5ever = "=0.29.1"
linfa = "=0.7.1"
ndarray = "=0.15.6"
rustls = "=0.23.28"
ring = "=0.17.14"
pqcrypto-kyber = "=0.8.1"
pqcrypto-mlkem = "=0.1.1"
hickory-dns = "=0.25.2"
etherparse = "=0.18.0"
indicatif = "=0.17.11"
console = "=0.15.11"
owo-colors = "=4.2.2"
serde_yaml = "=0.9.34+deprecated"
backoff = "=0.4.0"
tracing = "=0.1.44"
tracing-subscriber = "=0.3.23"
prometheus = "=0.13.4"
printpdf = "=0.8.2"
genpdf = "=0.2.0"
thiserror = "=2.0.12"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
anyhow = "=1.0.103"
clap = { version = "=4.5.61", features = ["derive"] }
clap_lex = "=0.7.7"
regex = "=1.12.4"

[dependencies]
serde_json = "=1.0.150"

[features]
default = []
network = []
iran = []
slow = []
tor = []
iran_bridge = []
bridge = []
dpi = []
nin = []

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
