# ═══════════════════════════════════════════════════════════════════════
# TorShield-IR Ultra VIP Edition — Project Configuration
# ═══════════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
]
markers = [
    "network: tests requiring network access (deselect with -m 'not network')",
    "iran: tests specific to Iran network conditions",
    "slow: tests taking more than 10 seconds",
    "tor: requires a running Tor daemon",
    "iran_bridge: requires Iran-reachable bridge",
    "bridge: requires live bridge",
    "dpi: requires DPI-evasion environment",
    "nin: requires NIN internet-cut detection",
]
addopts = "-ra --tb=short --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",  # long lines are allowed for legacy generated/provider payloads
    "E402",  # many modules keep long descriptive docstrings before imports
    "E701",  # legacy one-line guards are preserved to avoid behaviour churn
    "E702",  # legacy one-line guards are preserved to avoid behaviour churn
    "E741",  # legacy short callback variables are kept stable
    "UP042", # preserve str/Enum compatibility on Python 3.12+
    "W293",  # whitespace-only legacy doc/example lines are non-functional
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = false
follow_imports = "silent"

[[tool.mypy.overrides]]
module = ["tests.*", "conftest"]
ignore_errors = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "torshield-ir-ultra"
version = "1.0.0+vip"
description = "TorShield-IR Ultra VIP Edition — Iran Anti-Censorship Tor Bridge Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "PyYAML>=6.0.1",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]
dev = [
    "PyYAML>=6.0.1",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
]

[tool.setuptools]
packages = [
    "torshield_ai_gateway",
    "core",
    "sources",
    "config",
    "circuit_breaker",
    "recovery",
    "monitoring",
    "reports",
    "health",
    "gateway",
    "registry",
    "anti_censorship",
    "diagnostics",
    "autonomous",
]

[[tool.mypy.overrides]]
module = ["scripts.*", "torshield_ai_gateway.*", "monitoring.*"]
ignore_errors = true
