[package]
name        = "bridge-probe"
version     = "2.0.0"
edition     = "2021"
description = "TorShield-IR pluggable-transport handshake prober — Iran-optimised"
authors     = ["TorShield-IR Contributors"]

[[bin]]
name = "bridge-probe"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full", "process"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
#
# ─── CRITICAL FIX ───────────────────────────────────────────────────────────
# clap is pinned exactly in the workspace to avoid resolving clap_lex 1.1.0,
# whose edition2024 requirement breaks older CI toolchains.
# ────────────────────────────────────────────────────────────────────────────
clap = { workspace = true, features = ["derive"] }
clap_lex = { workspace = true }
#
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
anyhow = { workspace = true }
regex = { workspace = true }
